feat: refactor user name retrieval and improve null handling in cash register use cases